<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#405f70">


        <TextView

            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/backButton"
            android:text="@string/select_list1"
            android:textColor="#ffffff"
            android:textSize="25dp" />



    </RelativeLayout>

   <EditText
       android:focusable="true"
       android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText"
       android:layout_below="@+id/top"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:layout_marginTop="57dp" />


    <Button
        android:text = "@string/ok"
        android:textSize = "20dp"
        android:textColor = "#ffffff"
        android:layout_marginRight="15dp"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:id="@+id/button"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/call"
        android:textSize  = "20dp"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />


</RelativeLayout>