<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#405f70">


        <TextView

            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/backButton"
            android:text="@string/title2"
            android:textColor="#ffffff"
            android:textSize="25dp" />


        <Button
            android:id="@+id/backButton"
            android:layout_width="15dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/back_button" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/top"
        android:background="#e6e6e6">


        <ImageView
            android:id = "@+id/icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <View
        android:id="@+id/bar1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/back"
        android:background="#dcdcdc" />

    <RelativeLayout
        android:id="@+id/list1"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/bar1">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:text="@string/list2_1"
            android:textColor="#696969"
            android:textSize="20dp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginLeft="8dp"
            android:text="@string/sub2_1"
            android:textColor="#afafaf"
            android:textSize="10sp" />


    </RelativeLayout>

    <View
        android:id="@+id/bar2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/list1"
        android:background="#dcdcdc" />

    <RelativeLayout
        android:id="@+id/list2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/bar2">

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:text="@string/list2_2"
            android:textColor="#696969"
            android:textSize="20dp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/sub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title2"
            android:layout_marginLeft="8dp"
            android:text="@string/sub2_2"
            android:textColor="#afafaf"
            android:textSize="10sp" />


    </RelativeLayout>

    <View
        android:id="@+id/bar3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/list2"
        android:background="#dcdcdc" />


</RelativeLayout>